fix: update homepage URL for GitHub Pages deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "https://Subarta23.github.io/testutils",
+   "homepage": "https://Subarta23.github.io/Testutils",
   "name": "testutils",
   "version": "0.1.0",
   "private": true,
